--- a/hugo.toml
+++ b/hugo.toml
@@ -14,8 +14,8 @@ pygmentscodefencesguesssyntax = true
 paginate=5 # articles per page
 
 [params]
-	mode="dark" # color-mode → light,dark,toggle or auto
-	useCDN=true# don't use CDNs for fonts and icons, instead serve them locally.
+	mode="toggle" # color-mode → light,dark,toggle or auto
+	useCDN=false# don't use CDNs for fonts and icons, instead serve them locally.
 	# subtitle = "I'm into drawing chart and browsing meme."
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
