--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ paginate=5 # articles per page
 [params]
 	mode="dark" 	# color-mode → light,dark,toggle or auto
 	useCDN=false 	# don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "I'm into drawing chart and browsing meme."
+	subtitle = "Seeking clarity!" 
 	mathjax = true 	# enable MathJax support
 	katex = true 	# enable KaTeX support
 
