--- a/config.toml
+++ b/config.toml
@@ -9,12 +9,12 @@ pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-# disqusShortname = "yourDisqusShortname"
+disqusShortname = "iamtu_ricatto"
 
 paginate=5 # articles per page
 
 [params]
-	mode="dark" 	# color-mode → light,dark,toggle or auto
+	mode="toggle" 	# color-mode → light,dark,toggle or auto
 	useCDN=false 	# don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "I am 29 (as of 2022). My undergrad was Economics at a local university, and I am going back to school so I can pursue higher education in the field of Machine Learning & Artificial Intelligence." 
 	mathjax = true 	# enable MathJax support
