--- a/config.toml
+++ b/config.toml
@@ -1,55 +1,100 @@
 baseURL = "https://iamtu.dev"
 languageCode = "en-us"
 title = "iamtu.dev"
-theme="archie"
-copyright = "© iamtu_ricatto"
-
-# Code Highlight
-pygmentsstyle = "monokai"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
-
-disqusShortname = "iamtu-dev"
-
-paginate=5 # articles per page
-
-
+theme="paper"
+# disqusShortname = 'YOUR_DISQUS_SHORTNAME'   # use disqus comments
 
 [params]
-	mode="toggle" 	# color-mode → light,dark,toggle or auto
-	useCDN=false 	# don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "I am 29 (as of 2022). My undergrad was Economics at a local university, and I am going back to school so I can pursue higher education in the field of Machine Learning & Artificial Intelligence." 
-	mathjax = true 	# enable MathJax support
-	katex = true 	# enable KaTeX support
+  # color style
+  color = 'light'                           # linen, wheat, gray, light
 
-# Social Tags
+  # header social icons
+  # twitter = 'YOUR_TWITTER_ID'               # twitter.com/YOUR_TWITTER_ID
+  github = 'young1906'                 # github.com/YOUR_GITHUB_ID
+  instagram = 'tutdo93'           # instagram.com/YOUR_INSTAGRAM_ID
+  linkedin = 'YOUR_LINKEDIN_ID'             # linkedin.com/in/YOUR_LINKEDIN_ID
+  # mastodon = 'YOUR_MASTODON_LINK'           # e.g. 'https://mastodon.instance/@xxx'
+  # rss = true                                # show rss icon
 
-[[params.social]]
-name = "young1906"
-icon = "github"
-url = "https://github.com/young1906"
+  # home page profile
+  # avatar = 'GRAVATAR_EMAIL'                 # gravatar email or image url
+  name = 'Tu T. Do'
+  bio = 'I am 29 (as of 2022). My undergrad was Economics at a local university, and I am going back to school so I can pursue higher education in the field of Machine Learning & Artificial Intelligence.'
 
-# Main menu Items
 
-[[menu.main]]
-name = "Home"
-url = "/"
-weight = 1
+  # misc
+  disableHLJS = true                        # disable highlight.js
+  disablePostNavigation = false 	    # disable post navigation
+  monoDarkIcon = true                       # show monochrome dark mode icon
+  # gravatarCdn = 'GRAVATAR_CDN_LINK'         # e.g. 'https://cdn.v2ex.com/gravatar/'
+  # graphCommentId = "YOUR_GRAPH_COMMENT_ID"  # use graph comment (disqus alternative)
+  mathjax = true
+  katex = true
+  useCDN = false
+  math = true                               # enable KaTeX math typesetting globally
 
-[[menu.main]]
-name = "Publications"
-url = "/publication"
-weight = 2
+# giscus
+# [params.giscus]
+#   repo = 'YOUR_GISCUS_REPO'                 # see https://giscus.app for more details
+#   repoId = 'YOUR_GISCUS_REPO_ID'
+#   category = 'YOUR__GISCUS_CATEGORY'
+#   categoryId = 'YOUR_GISCUS_CATEGORY_ID'
+#   mapping = 'pathname'
+#   theme = 'light'
+#   lang = 'en-EN'
 
-[[menu.main]]
-name = "Posts"
-url = "/posts"
-weight = 2
+# baseURL = "https://iamtu.dev"
+# languageCode = "en-us"
+# title = "iamtu.dev"
+# theme="paper"
+# copyright = "© iamtu_ricatto"
+# 
+# # Code Highlight
+# pygmentsstyle = "monokai"
+# pygmentscodefences = true
+# pygmentscodefencesguesssyntax = true
+# 
+# disqusShortname = "iamtu-dev"
+# 
+# paginate=5 # articles per page
+# 
+# 
+# 
+# [params]
+# 	mode="toggle" 	# color-mode → light,dark,toggle or auto
+# 	useCDN=false 	# don't use CDNs for fonts and icons, instead serve them locally.
+# 	subtitle = "I am 29 (as of 2022). My undergrad was Economics at a local university, and I am going back to school so I can pursue higher education in the field of Machine Learning & Artificial Intelligence." 
+# 	mathjax = true 	# enable MathJax support
+# 	katex = true 	# enable KaTeX support
+# 
+# # Social Tags
+# 
+# [[params.social]]
+# name = "young1906"
+# icon = "github"
+# url = "https://github.com/young1906"
+# 
+# # Main menu Items
+# 
+# [[menu.main]]
+# name = "Home"
+# url = "/"
+# weight = 1
 
-[[menu.main]]
-name = "About"
-url = "/about"
-weight = 3
+# [[menu.main]]
+# name = "Publications"
+# url = "/publication"
+# weight = 2
+
+# [[menu.main]]
+# name = "Posts"
+# url = "/posts"
+# weight = 2
+
+# [[menu.main]]
+# name = "About"
+# url = "/about"
+# weight = 3
 
 [[menu.main]]
 name = "Tags"
