--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,7 @@ params:
   ShowReadingTime: false 
   ShowShareButtons: false 
   ShowPostNavLinks: true
-  ShowBreadCrumbs: false 
+  ShowBreadCrumbs: true 
   ShowCodeCopyButtons: true 
   ShowWordCount: true
   ShowRssButtonInSectionTermList: false 
@@ -116,22 +116,26 @@ params:
     keys: ["title", "permalink", "summary", "content"]
 menu:
   main:
+    - identifier: home 
+      name: home 
+      url: /
+      weight: 1
     - identifier: search
       name: search
       url: /search/
-      weight: 1
+      weight: 10
     - identifier: categories
       name: categories
       url: /categories/
-      weight: 2
+      weight: 100
     - identifier: tags
       name: tags
       url: /tags/
-      weight: 3
+      weight: 1000
     - identifier: archives 
       name: archives 
       url: /archives/
-      weight: 4
+      weight: 10000
         #
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
