--- a/config.yml
+++ b/config.yml
@@ -4,11 +4,11 @@ paginate: 5
 theme: PaperMod
 
 enableRobotsTXT: true
-buildDrafts: true 
+buildDrafts: false 
 buildFuture: false
 buildExpired: false
 
-googleAnalytics: UA-123-45
+googleAnalytics: G-PWLR4FLELZ
 
 minify:
   disableXML: true
