--- a/config.yml
+++ b/config.yml
@@ -9,6 +9,7 @@ buildFuture: false
 buildExpired: false
 
 googleAnalytics: G-PWLR4FLELZ
+disqusShortname: iamtu-dev.disqus.com
 
 minify:
   disableXML: true
