--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ params:
   description: "Documenting my learning and stuff."
   # keywords: [Blog, Portfolio, PaperMod]
   author: Tu T. Do 
-  # author: ["Me", "You"] # multiple authors
+  author: ["Me", "You"] # multiple authors
   # images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
   defaultTheme: light # auto # dark, light
@@ -33,17 +33,17 @@ params:
 
   ShowReadingTime: true 
   ShowShareButtons: false 
-  ShowPostNavLinks: true
+  ShowPostNavLinks: false 
   ShowBreadCrumbs: false 
   ShowCodeCopyButtons: true 
   ShowWordCount: true
   ShowRssButtonInSectionTermList: false 
-  UseHugoToc: true 
+  UseHugoToc: false 
   disableSpecial1stPost: false
   disableScrollToTop: false
   comments: true 
   hidemeta: true 
-  hideSummary: false
+  hideSummary: false 
   showtoc: true 
   tocopen: false 
   math: true
@@ -98,10 +98,10 @@ params:
 
   analytics:
     google:
-      SiteVerificationTag: "XYZabc"
+      SiteVerificationTag: "G-PWLR4FLELZ"
 
   cover:
-    hidden: false# hide everywhere but not in structured data
+    hidden: false # hide everywhere but not in structured data
     hiddenInList: false # hide on list pages and home
     hiddenInSingle: false # hide on single page
 
