--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,7 @@ minify:
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: iamtu
-  description: "Documenting my learning and stuff."
+  description: "My research blog"
   # keywords: [Blog, Portfolio, PaperMod]
   author: Tu T. Do 
   author: ["Me", "You"] # multiple authors
@@ -41,10 +41,10 @@ params:
   UseHugoToc: false 
   disableSpecial1stPost: false
   disableScrollToTop: false
-  comments: true 
-  hidemeta: true 
-  hideSummary: false 
-  showtoc: true 
+  comments: True 
+  hidemeta: True 
+  hideSummary: False 
+  showtoc: True 
   tocopen: false 
   math: true
 
@@ -66,7 +66,7 @@ params:
   profileMode:
     enabled: false # needs to be explicitly set
     title: iamtu.dev 
-    subtitle: "This is subtitle"
+    subtitle: "My reseach blog"
     # imageUrl: "/images/heat_pinn.png"
     imageWidth: 120
     imageHeight: 120
@@ -74,6 +74,8 @@ params:
     buttons:
       - name: Posts
         url: posts
+      - name: About 
+        url: about 
       - name: Tags
         url: tags
 
